ref: fully on java21
Signed-off-by: Goldenfield192 <1437356849@qq.com>